# tab-groups-windows-list

./: .env.sample  .gitignore  .mise.toml  AGENTIC_VS_APPLICATION.md  AGENTS.md  CLAUDE.md  HANDOVER.md  PLAN-window-matching.md  README.md  background.js  chrome-webstore-api-credentials.md  jest.config.js  manifest.json  package-lock.json  package.json  playwright.config.js  pnpm-lock.yaml  popup.html  popup.js  pyproject.toml
.beads/: .gitignore  issues.jsonl
.claude/commands/: adws-build.md  adws-convert-stories-to-beads.md  adws-implement.md  adws-load-bundle.md  adws-prime.md  adws-verify.md  bmad-help.md  land.md
.claude/hooks/: command_blocker.sh  file_tracker.sh  hook_logger.sh
.gemini/commands/: bmad-help.md
.githooks/: pre-push
.github/workflows/: auto-merge.yml  ci-cd.yml  publish.yml  release.yml  test.yml
_bmad-output/brainstorming/: brainstorming-session-2026-01-31.md
_bmad-output/implementation-artifacts/: 1-1-project-scaffold-and-dual-toolchain-setup.md  (+32 more)
adws/: README.md  adw_dispatch.py  adw_triage.py  adw_trigger_cron.py
docs/: chromium-feature-request-window-name.md  chromium-issue-comment.md
native-host/: host.py  install.sh
scripts/: adw-dispatch.sh  adw-triage.sh  adw-trigger-cron.sh  build-extension.js  cdp-diagnose.js  debug-brave.sh  demo-window-names.mjs  diagnose-helpers.js  diagnose.mjs  verify-python.sh
store_assets/: store_description.txt
tests/: background.unit.test.js  build-extension.unit.test.js  diagnose.unit.test.js  extension-real.e2e.spec.js  extension.e2e.spec.js  fixtures.js  popup.unit.test.js
(+172 files in other folders)
